--- a/src/components/VideoQuizUpload/VideoQuizUploadForm.module.css
+++ b/src/components/VideoQuizUpload/VideoQuizUploadForm.module.css
@@ -44,7 +44,7 @@
   color: var(
     --text-color
   ); /* Match the inactive tab text color from the screenshot */
-  padding: 10px 20px; /* Adjust padding as necessary */
+  padding: 16px 16px; /* Adjust padding as necessary */
 }
 
 .tabs button {
@@ -54,7 +54,7 @@
   transition: background-color 0.3s ease;
   flex-grow: 1; /* Grow to fill the tab container */
   text-align: center; /* Center the text inside the button */
-  padding: 8px 16px; /* Padding for the text */
+  padding: 16px 16px; /* Padding for the text */
   white-space: nowrap;
 }
 
@@ -63,14 +63,17 @@
   height: 16px;
   line-height: 16px; /* Aligns the 'X' vertically */
   text-align: center; /* Aligns the 'X' horizontally */
-  /* border-radius: 16px; */
-  margin: 0 14px 0 12px;
-  padding: 3px;
+  margin-left: 12px;
+  /* padding: 3px; */
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.25s; /* Smooth transition for background color */
   display: inline-block; /* Allows us to set width and height */
   user-select: none; /* Prevents text selection */
+}
+
+.hiddenRemoveBtn {
+  visibility: hidden;
 }
 
 /* Specific styles for when a tab is active */
