--- a/src/components/VideoQuizUpload/VideoQuizUploadForm.module.css
+++ b/src/components/VideoQuizUpload/VideoQuizUploadForm.module.css
@@ -28,9 +28,33 @@
   transition: background-color 0.3s;
 }
 
+.tabButton {
+  flex: 1; /* Button should fill the entire tab */
+  padding: 10px 15px;
+  cursor: pointer;
+  background: transparent; /* Make the background transparent */
+  color: inherit; /* Inherit text color from parent */
+  border: none;
+  transition: background-color 0.3s;
+  /* More button-specific styles */
+}
+
+.inactiveTab {
+  background: #95a5a6; /* Light grey background for default tabs */
+  /* Other styles for inactive tabs */
+}
+
+.tab {
+  flex: 1;
+  display: flex;
+  justify-content: center; /* Center the button text */
+  align-items: center; /* Vertically center the button */
+  /* Any additional styling */
+}
+
 .activeTab {
-  background-color: #2ecc71; /* Consistent with tabContent */
-  color: #2c3e50;
+  background-color: #2ecc71; /* Active tab background */
+  /* Other styles for the active tab */
 }
 
 .removeQuestionBtn {
