--- a/src/pages/extra/[year]/LessonsList.module.css
+++ b/src/pages/extra/[year]/LessonsList.module.css
@@ -1,5 +1,3 @@
-/* LessonsList.module.css */
-
 .lessonsContainer {
   padding: 2rem;
   display: flex;
@@ -10,23 +8,23 @@
 
 .lessonsHeading {
   color: var(--text-color);
-  font-size: 2.5rem; /* Slightly smaller than the main heading */
+  font-size: 2.5rem;
   margin-bottom: 1rem;
   text-align: center;
 }
 
 .lessonButton {
-  background-color: #f4a261; /* A warm color for the button */
+  background-color: #f4a261;
   color: white;
   padding: 0.5rem 1rem;
-  font-size: 1.25rem; /* Slightly smaller than the call-to-action button */
+  font-size: 1.25rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition:
     transform 0.2s,
     box-shadow 0.2s;
-  margin: 0.5rem; /* Space between buttons */
+  margin: 0.5rem;
   box-shadow: 0px 5px 10px rgba(0, 123, 255, 0.2);
 }
 
@@ -34,5 +32,4 @@
   background-color: #e76f51;
   box-shadow: 0 3px 8px 0 rgba(0, 118, 255, 0.37);
   transform: scale(1.04);
-  /* Moves button up slightly when hovered */
 }
