styles: dark theme black color soften for lessons list

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,7 +33,7 @@
   --header-bg-color: #27272a; /* Dark theme header background color */
   --footer-bg-color: #27272a; /* Dark theme footer background color */
   --text-color: #ffffff; /* Dark theme text color */
-  --text-bg-color: #121212;
+  --text-bg-color: #2b2b2b;
   --background-image: url("/background-theme-dark.webp"); /* Dark theme background image */
   --accent-color: #00bcd4; /* Dark theme accent color */
   --secondary-color: #9c27b0; /* Dark theme secondary color */
