--- a/src/components/DeleteConfirmationDialog/DeleteConfirmationDialog.module.css
+++ b/src/components/DeleteConfirmationDialog/DeleteConfirmationDialog.module.css
@@ -4,7 +4,7 @@
   top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: var(--form-bg-color);
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
