--- a/src/pages/educator/video-quizzes/[year]/LessonsListPage.module.css
+++ b/src/pages/educator/video-quizzes/[year]/LessonsListPage.module.css
@@ -21,13 +21,13 @@
   text-decoration: underline;
 }
 
-/* .title {
+.title {
   font-size: 24px;
   color: var(--text-color);
   margin-bottom: 20px;
 }
 
-.lessonsList {
+/* .lessonsList {
   list-style: none;
   padding: 0;
   margin: 0;
