styles: minor fix to text size and removal of media query text font

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -2,40 +2,40 @@
 .outerContainer {
   display: flex;
   justify-content: center;
-  padding: 0 50px;
+  padding: 0 3rem;
   overflow-x: hidden;
   overflow-y: hidden;
 }
 
 .innerContainer {
-  max-width: 1320px;
+  max-width: 82.5rem; /* 1320px */
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 3.125rem; /* 50px */
 }
 
 /* Content Styles */
 .contentContainer {
-  max-width: 750px;
+  max-width: 46.875rem; /* 750px */
   width: 100%;
   text-align: justify;
 }
 
 .sectionHead {
-  font-size: 45px;
-  line-height: 50px;
+  font-size: 2.8125rem; /* 45px */
+  line-height: 3.125rem; /* 50px */
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem; /* 10px */
   text-align: center;
 }
 
 .sectionText {
   color: var(--text-color);
-  margin-top: 25px;
-  font-size: 18px;
-  line-height: 27px;
+  margin-top: 2.3rem; /* 25px */
+  font-size: 1.125rem; /* 18px */
+  line-height: 1.6875rem; /* 27px */
 }
 
 .link {
@@ -46,54 +46,4 @@
 .link:hover {
   color: #0056b3;
   text-decoration: underline;
-}
-
-/* Responsive Media Queries */
-@media (max-width: 1024px) {
-  .contentContainer {
-    text-align: center;
-  }
-
-  .innerContainer {
-    margin-top: 50px;
-  }
-}
-
-@media (max-width: 768px) {
-  .sectionText {
-    font-size: 18px;
-  }
-
-  .sectionHead {
-    font-size: 40px;
-    line-height: 45px;
-  }
-}
-
-@media (max-width: 500px) {
-  .sectionHead {
-    font-size: 30px;
-    line-height: 35px;
-  }
-
-  .outerContainer {
-    padding: 0 30px;
-  }
-
-  .sectionText {
-    font-size: 16px;
-    line-height: 24px;
-  }
-
-  .innerContainer {
-    margin-top: 0;
-  }
-
-  .outerContainer {
-    padding: 0 20px;
-  }
-
-  .innerContainer {
-    margin-top: 40px;
-  }
 }
