--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -47,3 +47,9 @@
   color: #0056b3;
   text-decoration: underline;
 }
+
+@media (max-width: 480px) {
+  .sectionText {
+    font-size: 1.1rem;
+  }
+}
