--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,10 +35,10 @@
   --text-color: #ffffff; /* Dark theme text color */
   --text-bg-color: #2b2b2b;
   --background-image: url("/background-theme-dark.webp"); /* Dark theme background image */
-  --accent-color: #00bcd4; /* Dark theme accent color */
   --secondary-color: #9c27b0; /* Dark theme secondary color */
-  --accent-color-hover: #62efff; /* Dark theme accent color hover */
   --input-bg-color: #333333;
+  --accent-color: #353839;
+  --accent-color-hover: #2b2e2f;
 
   /* Video Upload Form Color */
   --form-bg-color: #333333;
