--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,7 @@
   --form-bg-color: #f9f9f9;
 
   /* Video Upload Form Color */
+  --form-bg-color: #fff;
   --border-color: #dae0e7;
   --tab-text-color: #292929; /* Light theme tab text color */
   --tab-bg-color: #fff; /* Light theme tab background color */
