--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,22 +3,22 @@
 @tailwind utilities;
 
 :root {
-  --header-bg-color: #d1d6d7; /* Light theme header background color */
-  --footer-bg-color: #d1d6d7; /* Light theme footer background color */
-  --text-color: #292929; /* Light theme text color, slightly off-black for softer contrast */
-  --text-bg-color: #f5f5f5; /* Reduce white brightness */
-  --background-image: url("/background-theme-light.webp"); /* Light theme background image */
-  --accent-color: #007bff; /* Light theme accent color */
-  --accent-color-hover: #0056b3; /* Light theme accent color hover */
+  --header-bg-color: #d1d6d7;
+  --footer-bg-color: #d1d6d7;
+  --text-color: #292929;
+  --text-bg-color: #f5f5f5;
+  --background-image: url("/background-theme-light.webp");
+  --accent-color: #007bff;
+  --accent-color-hover: #0056b3;
   --input-bg-color: #ffffff;
 
   /* Video Upload Form Color */
   --form-bg-color: #fff;
   --border-color: #dae0e7;
-  --tab-text-color: #292929; /* Light theme tab text color */
-  --tab-bg-color: #fff; /* Light theme tab background color */
-  --button-bg-color: #007bff; /* Light theme button background color */
-  --button-text-color: #fff; /* Light theme button text color */
+  --tab-text-color: #292929;
+  --tab-bg-color: #fff;
+  --button-bg-color: #007bff;
+  --button-text-color: #fff;
   --button-hover-bg-color: #0056b3;
 
   --input-border-color: #ced4da;
@@ -28,11 +28,11 @@
 
 /* Dark theme styles */
 [data-theme="dark"] {
-  --header-bg-color: #27272a; /* Dark theme header background color */
-  --footer-bg-color: #27272a; /* Dark theme footer background color */
-  --text-color: #ffffff; /* Dark theme text color */
+  --header-bg-color: #27272a;
+  --footer-bg-color: #27272a;
+  --text-color: #ffffff;
   --text-bg-color: #2b2b2b;
-  --background-image: url("/background-theme-dark.webp"); /* Dark theme background image */
+  --background-image: url("/background-theme-dark.webp");
   --input-bg-color: #333333;
   --accent-color: #353839;
   --accent-color-hover: #2b2e2f;
@@ -40,14 +40,14 @@
   /* Video Upload Form Color */
   --form-bg-color: #333333;
   --border-color: #404040;
-  --tab-text-color: #ffffff; /* Dark theme tab text color */
-  --tab-bg-color: #222222; /* Dark theme tab background color */
+  --tab-text-color: #ffffff;
+  --tab-bg-color: #222222;
   --button-bg-color: #d32f2f;
   --button-text-color: #ffffff;
   --button-hover-bg-color: #b71c1c;
 
-  --input-border-color: #555; /* Example border color for dark theme */
-  --input-focus-border-color: #1a73e8; /* Example focus color for dark theme */
+  --input-border-color: #555;
+  --input-focus-border-color: #1a73e8;
   --input-focus-shadow-color: rgba(26, 115, 232, 0.25);
 }
 
