styles: accent-color-hover made with lighter shade

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,7 +35,7 @@
   --background-image: url("/background-theme-dark.webp");
   --input-bg-color: #333333;
   --accent-color: #353839;
-  --accent-color-hover: #2b2e2f;
+  --accent-color-hover: #808384;
 
   /* Video Upload Form Color */
   --form-bg-color: #333333;
