--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -50,6 +50,13 @@
 
 .themeChangerSidebar {
   display: none;
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  padding: 0.75rem 1.5rem;
+  cursor: pointer;
+  transition:
+    background-color 1s,
+    color 1s;
 }
 
 @media (max-width: 768px) {
