--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,4 +1,3 @@
-/* Home.module.css */
 .container {
   padding: 2rem;
   min-height: 100vh;
@@ -31,7 +30,7 @@
 }
 
 .callToAction:hover {
-  background-color: var(--accent-color-hover);
+  background-color: var(--button-hover-bg-color);
   box-shadow: 0 4px 14px 0 rgba(0, 118, 255, 0.39); /* Subtle shadow effect */
   transform: scale(1.04); /* Slightly enlarges the button when hovered */
 }
