styles: global color for button-hover-bg set to a ligther tone

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,7 @@
   --tab-bg-color: #fff;
   --button-bg-color: #007bff;
   --button-text-color: #fff;
-  --button-hover-bg-color: #0056b3;
+  --button-hover-bg-color: #0062cc;
 
   --input-border-color: #ced4da;
   --input-focus-border-color: #80bdff;
