--- a/src/pages/educator/extra-video-quizzes/ManageVideoQuizzes.module.css
+++ b/src/pages/educator/extra-video-quizzes/ManageVideoQuizzes.module.css
@@ -12,7 +12,7 @@
 .backLink {
   display: inline-block;
   margin-bottom: 20px;
-  color: #2563eb;
+  color: var(--backlink-color);
   transition:
     color 0.3s ease,
     text-decoration 0.3s ease;
@@ -20,6 +20,7 @@
 
 .backLink:hover {
   text-decoration: underline;
+  color: var(--backlink-hover-color);
 }
 
 .title {
