--- a/src/components/VideoPlayer/VideoPlayer.module.css
+++ b/src/components/VideoPlayer/VideoPlayer.module.css
@@ -1,9 +1,9 @@
 .VideoContainer {
   position: relative;
-  overflow: hidden; /* This prevents any overflow */
-  max-width: 100%; /* Ensures the container doesn't exceed the width of its parent */
-  margin: auto; /* This will center the container */
-  aspect-ratio: 16 / 9; /* This sets a consistent aspect ratio for the video */
+  overflow: hidden;
+  max-width: 100%;
+  margin: auto;
+  aspect-ratio: 16 / 9;
   max-height: 90vh;
 }
 
@@ -11,35 +11,29 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(
-    -50%,
-    -50%
-  ); /* This will center the video in all browsers */
-  width: 100%; /* Full width to maintain responsiveness */
-  height: 100%; /* Full height to maintain aspect ratio */
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
 }
 
-/* Additional responsive styles if needed */
 @media screen and (max-width: 768px) {
   .VideoContainer {
-    aspect-ratio: 4 / 3; /* Adjust the aspect ratio for smaller screens if necessary */
+    aspect-ratio: 4 / 3;
   }
 }
 
 @media screen and (max-width: 480px) {
   .VideoContainer {
-    aspect-ratio: 1; /* More square aspect ratio for very small screens */
+    aspect-ratio: 1;
   }
 }
 
 @media screen and (max-width: 768px) and (orientation: landscape) {
   .VideoContainer {
-    /* This will use more of the available height in landscape mode */
-    aspect-ratio: 16 / 9; /* You can tweak this ratio if you need to */
-    max-height: none; /* Remove the max-height restriction or adjust as necessary */
+    aspect-ratio: 16 / 9;
+    max-height: none;
   }
   .ReactPlayer {
-    /* Adjust the top position so the video is still vertically centered */
     top: 50%;
   }
 }
