--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -1,4 +1,3 @@
-/* Container Styles */
 .outerContainer {
   display: flex;
   justify-content: center;
@@ -8,42 +7,41 @@
 }
 
 .innerContainer {
-  max-width: 82.5rem; /* 1320px */
+  max-width: 82.5rem;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 3.125rem; /* 50px */
+  margin-top: 3.125rem;
 }
 
-/* Content Styles */
 .contentContainer {
-  max-width: 46.875rem; /* 750px */
+  max-width: 46.875rem;
   width: 100%;
   text-align: justify;
 }
 
 .sectionHead {
-  font-size: 2.8125rem; /* 45px */
-  line-height: 3.125rem; /* 50px */
+  font-size: 2.8125rem;
+  line-height: 3.125rem;
   font-weight: 700;
-  margin-bottom: 0.625rem; /* 10px */
+  margin-bottom: 0.625rem;
   text-align: center;
 }
 
 .sectionText {
   color: var(--text-color);
-  margin: 2.3rem 0; /* 25px 0 */
-  font-size: 1.5rem; /* 18px */
-  line-height: 1.6875rem; /* 27px */
+  margin: 2.3rem 0;
+  font-size: 1.5rem;
+  line-height: 1.6875rem;
 }
 .link {
   font-weight: 600;
-  color: #007bff;
+  color: var(--accent-color);
 }
 
 .link:hover {
-  color: #0056b3;
+  color: var(--accent-color-hover);
   text-decoration: underline;
 }
 
