styles: global css variable year-button-bg-color added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,8 @@
 
   --backlink-color: #2563eb;
   --backlink-hover-color: #1e40af;
+
+  --year-buttton-bg-color: #c7a600;
 }
 
 /* Dark theme styles */
