styles: --year-buttton-bg-color set to  #fada5e light yellow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,7 @@
   --backlink-color: #2563eb;
   --backlink-hover-color: #1e40af;
 
-  --year-buttton-bg-color: #c7a600;
+  --year-buttton-bg-color: #fada5e;
   --year-buttton-bg-hover-color: #ffd700;
 }
 
