styles: global year button-text-color set to ffffff

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,7 @@
 
   --year-buttton-bg-color: #fada5e;
   --year-buttton-bg-hover-color: #ffd700;
+  --year-buttton-text-color: #ffffff;
 }
 
 /* Dark theme styles */
@@ -61,6 +62,7 @@
 
   --year-buttton-bg-color: #9f8400;
   --year-buttton-bg-hover-color: #ffd700;
+  --year-buttton-text-color: #ffffff;
 }
 
 body {
